{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 22,
  "lineage": "b04db641-c015-ca37-fe96-65d462662783",
  "resources": [
    {
      "module": "module.Environment-setup",
      "mode": "managed",
      "type": "aws_instance",
      "name": "name",
      "provider": "module.Environment-setup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:905418405787:instance/i-071175b9c6492f060",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071175b9c6492f060",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "My-key-Terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0180ec66d33f009a6",
            "private_dns": "ip-10-0-0-159.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.159",
            "public_ip": "107.23.22.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0245233ba68073b87",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1ac10b313cd1d74",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": ["sg-002fd3477c2d11196"]
          },
          "dependencies": [
            "module.Environment-setup.aws_key_pair.name",
            "module.Environment-setup.aws_security_group.name",
            "module.Environment-setup.aws_subnet.name",
            "module.Environment-setup.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.Environment-setup",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "name",
      "provider": "module.Environment-setup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418405787:internet-gateway/igw-0348a8b1dd972e1e4",
            "id": "igw-0348a8b1dd972e1e4",
            "owner_id": "905418405787",
            "vpc_id": "vpc-0ce4b9eda523606e9"
          },
          "dependencies": ["module.Environment-setup.aws_vpc.name"]
        }
      ]
    },
    {
      "module": "module.Environment-setup",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "name",
      "provider": "module.Environment-setup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418405787:route-table/rtb-0ed7fe246d4cfe550",
            "id": "rtb-0ed7fe246d4cfe550",
            "owner_id": "905418405787",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0348a8b1dd972e1e4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ce4b9eda523606e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Environment-setup.aws_internet_gateway.name",
            "module.Environment-setup.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.Environment-setup",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "name",
      "provider": "module.Environment-setup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03037520f8695cd9f",
            "route_table_id": "rtb-0ed7fe246d4cfe550",
            "subnet_id": "subnet-0d1ac10b313cd1d74"
          },
          "dependencies": [
            "module.Environment-setup.aws_internet_gateway.name",
            "module.Environment-setup.aws_route_table.name",
            "module.Environment-setup.aws_subnet.name",
            "module.Environment-setup.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.Environment-setup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "name",
      "provider": "module.Environment-setup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418405787:security-group/sg-002fd3477c2d11196",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002fd3477c2d11196",
            "ingress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240928150915499900000001",
            "name_prefix": "terraform-",
            "owner_id": "905418405787",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ce4b9eda523606e9"
          },
          "sensitive_attributes": [],
          "dependencies": ["module.Environment-setup.aws_vpc.name"]
        }
      ]
    },
    {
      "module": "module.Environment-setup",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "name",
      "provider": "module.Environment-setup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418405787:subnet/subnet-0d1ac10b313cd1d74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1ac10b313cd1d74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418405787",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ce4b9eda523606e9"
          },
          "dependencies": ["module.Environment-setup.aws_vpc.name"]
        }
      ]
    },
    {
      "module": "module.Environment-setup",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "name",
      "provider": "module.Environment-setup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418405787:vpc/vpc-0ce4b9eda523606e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aedf037d4f11f136",
            "default_route_table_id": "rtb-0a48b66c120b60cd0",
            "default_security_group_id": "sg-080275e2cd34b94bd",
            "dhcp_options_id": "dopt-0d4c6140f6482700c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce4b9eda523606e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a48b66c120b60cd0",
            "owner_id": "905418405787"
          }
        }
      ]
    }
  ]
}